// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`H4 should allow size to be overridden 1`] = `
.emotion-2 {
  display: block;
  vertical-align: bottom;
  font-family: 'WebFaktSoftPro',sans-serif;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
  cursor: inherit;
  text-align: unset;
  text-decoration: inherit;
  font-weight: 400;
  font-size: 18px;
  color: rgb(55,69,97);
  line-height: 1.25em !important;
}

.emotion-2:hover {
  text-decoration: inherit;
}

.emotion-2 strong {
  font-weight: 500;
}

.emotion-2 > i {
  position: relative;
  left: 2px;
  vertical-align: top;
}

<h4
  className="emotion-0 emotion-1 emotion-2"
  color="navy700"
  onClick={undefined}
  size="large"
  style={Object {}}
>
  An H4 Tag
</h4>
`;

exports[`H4 should render shallow component ok 1`] = `
.emotion-2 {
  display: block;
  vertical-align: bottom;
  font-family: 'WebFaktSoftPro',sans-serif;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
  cursor: inherit;
  text-align: unset;
  text-decoration: inherit;
  font-weight: 400;
  font-size: 14px;
  color: rgb(55,69,97);
  line-height: 1.25em !important;
}

.emotion-2:hover {
  text-decoration: inherit;
}

.emotion-2 strong {
  font-weight: 500;
}

.emotion-2 > i {
  position: relative;
  left: 2px;
  vertical-align: top;
}

<h4
  className="emotion-0 emotion-1 emotion-2"
  color="navy700"
  onClick={undefined}
  size="small"
  style={Object {}}
>
  An H4 Tag
</h4>
`;
